[gd_scene load_steps=7 format=3 uid="uid://yvp2kuau43v5"]

[ext_resource type="Script" path="res://rooms/flywheel_room.gd" id="1_e37tb"]
[ext_resource type="PackedScene" uid="uid://b5wl1fbu8w4rm" path="res://common/pillar.tscn" id="2_haf51"]
[ext_resource type="PackedScene" uid="uid://dy2fpl767ftw3" path="res://common/lamp.tscn" id="3_ji3ao"]
[ext_resource type="MeshLibrary" uid="uid://bwbsu80ly13cd" path="res://tilesets/dungeon_tileset.tres" id="4_44r2c"]
[ext_resource type="PackedScene" uid="uid://dowkdyyao5rfd" path="res://common/nav_point.tscn" id="5_06y6a"]
[ext_resource type="PackedScene" uid="uid://x62k4vbbjqje" path="res://interactable/interactable.tscn" id="6_0qn60"]

[node name="FlywheelRoom" type="Node3D"]
script = ExtResource("1_e37tb")

[node name="TokenPillar" parent="." instance=ExtResource("2_haf51")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.299813, -2)

[node name="TokenLamp" parent="TokenPillar" instance=ExtResource("3_ji3ao")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("4_44r2c")

[node name="NavPointDoorW" parent="." instance=ExtResource("5_06y6a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="NavPointN" parent="." instance=ExtResource("5_06y6a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -4)

[node name="FlywheelPillar" parent="." instance=ExtResource("2_haf51")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.299813, -4)

[node name="FlywheelInteractable" parent="FlywheelPillar" instance=ExtResource("6_0qn60")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.700187, 0)

[node name="FlywheelLamp" parent="FlywheelPillar" instance=ExtResource("3_ji3ao")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.4, 2)
